Tmux stuff and Emacs improvements from Delano (github.com/ledona)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,1 +1,19 @@
-set -g prefix Ctrl-o
+unbind C-o #unbind rotate-pane
+set -g prefix C-q
+set-option -g mouse-select-pane on
+setw -g mode-mouse on
+set-option -g status-bg black
+set-option -g status-fg white
+set -g base-index 1
+#set -g status-left '#[fg=green]#H;
+set-window-option -g window-status-current-fg yellow
+bind r source-file ~/.tmux.conf
+#set-option -g status-position top
+bind h split-window
+bind v split-window -h
+
+#notes:
+# ! - break pane - takes the pane and makes a new window out of it
+# n - next window, p - previous window
+# arrows - switch panes
+# t - display time
