--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,12 +5,13 @@ setw -g mode-mouse on
 set-option -g status-bg black
 set-option -g status-fg white
 set -g base-index 1
-#set -g status-left '#[fg=green]#H;
+#set -g status-left '#[fg=green]#H;'
 set-window-option -g window-status-current-fg yellow
 bind r source-file ~/.tmux.conf
 #set-option -g status-position top
 bind h split-window
 bind v split-window -h
+set-option -g default-shell /bin/zsh
 
 #notes:
 # ! - break pane - takes the pane and makes a new window out of it
