--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,3 +18,16 @@ set-option -g default-shell /bin/zsh
 # n - next window, p - previous window
 # arrows - switch panes
 # t - display time
+
+# Useful for copy/pasting
+unbind +
+bind + \
+  new-window -d -n tmux-zoom 'clear && echo TMUX ZOOM && read' \;\
+  swap-pane -s tmux-zoom.0 \;\
+  select-window -t tmux-zoom
+
+unbind -
+  bind - \
+  last-window \;\
+  swap-pane -s tmux-zoom.0 \;\
+  kill-window -t tmux-zoom
