--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,11 @@
         path = ~/.gitconfig.local
 [color]
         ui = always
+[color "diff"]
+       #meta = yellow 
+       #frag = magenta bold
+       old = red
+       new = green
 [color "grep"]
         filename = red
         linenumber = red
@@ -14,7 +19,8 @@
         br = branch
         ci = commit -a
         df = diff
-        idff = diff
+        dw = diff --color-words
+        idff = diff       
         dwc = diff -w -M --color-words
         lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
         ll = log -p
@@ -29,6 +35,7 @@
         #sup = submodule foreach git pull origin master
         todo = grep --ignore-case "TODO"
         tree = log --graph --decorate --pretty=oneline --abbrev-commit --all
+        undopush = push -f origin HEAD^:master
         up = pull --rebase
 [core]
         editor = emacs
@@ -41,3 +48,16 @@
         merge = refs/heads/master
 [grep]
         lineNumber = true
+# URL shorthands
+[url "git@github.com:"]
+        insteadOf = "gh:"
+        pushInsteadOf = "github:"
+        pushInsteadOf = "git://github.com/"
+[url "git://github.com/"]
+        insteadOf = "github:"
+[url "git@gist.github.com:"]
+        insteadOf = "gst:"
+        pushInsteadOf = "gist:"
+        pushInsteadOf = "git://gist.github.com/"
+[url "git://gist.github.com/"]
+        insteadOf = "gist:"
